--- a/Churn_SVM.ipynb
+++ b/Churn_SVM.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Akshat\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\data.py:334: DataConversionWarning: Data with input dtype uint8, int64, float64 were all converted to float64 by MinMaxScaler.\n",
-      "  return self.partial_fit(X, y)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -55,10 +47,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "import warnings\n",
     "from warnings import simplefilter\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "simplefilter(action='ignore', category=FutureWarning)\n",
+    "from sklearn.exceptions import DataConversionWarning\n",
+    "warnings.filterwarnings(action='ignore', category=DataConversionWarning)\n",
     "\n",
     "telcom = pd.read_csv(\"churn.csv\")\n",
     "\n",
@@ -137,7 +132,7 @@
     "fpr, tpr, threshold = metrics.roc_curve(y_test, test_results)\n",
     "roc_auc = metrics.auc(fpr, tpr)\n",
     "\n",
-    "# method I: plt\n",
+    "# print ROC curve\n",
     "plt.clf()\n",
     "plt.title('Receiver Operating Characteristic')\n",
     "plt.plot(fpr, tpr, 'b', label = 'AUC = %0.2f' % roc_auc)\n",
@@ -147,8 +142,7 @@
     "plt.ylim([0, 1])\n",
     "plt.ylabel('True Positive Rate')\n",
     "plt.xlabel('False Positive Rate')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
